# G4G_Basic

./: .gitignore  README.md  imgui.ini
build2/: setup_win64_2019.bat  setup_xcode.command
build3/: setup_win64_2019.bat  setup_xcode.command
data/: fDepth.glsl  fDepth.lgsl  fFlatLit.glsl  fFlatLit.lgsl  fParticle.lgsl  fPost.glsl  fPost.lgsl  fragColors.lgsl  fragTexture.glsl  fragTexture.lgsl  fragTextured.glsl  fragTextured.lgsl  fraglit.glsl  fragment.lgsl  quadCubeVertexShader.glsl  sage.obj_  vFlatLit.glsl  vFlatLit.lgsl  vParticle.glsl  vParticle.lgsl  vPost.lgsl  vSky.glsl  vertColors.glsl  vertColors.lgsl  vertTexture.glsl  vertTexture.lgsl  vertTextured.glsl  vertex.glsl  vertex.lgsl
includes/: imgui.h
includes/glad/: glad.h
lib/: glfw3.lib  libglfw.dylib
src/Project1/: CMakeLists.txt  Main.cpp  RayTracing.cpp  Simple.cpp_  basics.cpp  renderer.h  shader_s.h
src/Project2/: CMakeLists.txt  Main.cpp  renderer.h
src/Project3/: BasicChapter.cpp  BasicChapter.h  CMakeLists.txt  Chapter0.h  Chapter1.cpp  Chapter1a_HW4CubeQuad.cpp  Chapter2.cpp  CubeModel.cpp  CubeRenderers.cpp  FrameBufferObjects.cpp  FrameBufferObjects.h  ImportedModel.cpp  ImportedModel.h  Main.cpp  Material.h  QuadModel.cpp  QuadRenderer.cpp  RayTracing.cpp  SceneGraph.cpp  SceneGraph.h  SphereModel.cpp  SphereModel.h  SphereRenderer.cpp  SphereRenderer.h  TorusModel.cpp  TorusRenderer.cpp  basics.cpp  camera.h  drawImGui.cpp  drawImGui.hpp  renderer.h  renderers.cpp  shader_s.h  textures.cpp  textures.h  triangleModel.cpp
tools/: readme-QR-TO_PNG.txt
